# NvidiaAIDenoiser

./: CMakeLists.txt  README.md  SConstruct
cmake/: FindOptiX80.cmake
